# goit-pythonweb-hw-12

./: .env.example  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml
.github/workflows/: main.yml
docs/: conf.py  index.rst
goit_hw_10/: auth.py  cloudinary_service.py  config.py  crud.py  database.py  email_service.py  main.py  models.py  schemas.py  users.py
goit_hw_12/: auth.py  cloudinary_service.py  config.py  crud.py  database.py  email_service.py  main.py  models.py  redis_client.py  schemas.py  users.py
tests/: conftest.py  test_auth_routes.py  test_auth_unit.py  test_cloudinary_service.py  test_contacts_routes.py  test_contacts_unit.py  test_email_service.py  test_extra_routes.py  test_users_routes.py
